# fichajes-bot

./: .gitignore  PRIMEROS_PASOS.md  PROJECT_KNOWLEDGE_v3.1.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: archiver.yml  backtest.yml  bulk-process.yml  calibrator.yml  ci.yml  cold-loop.yml  daily-report.yml  hot-loop.yml  (+4 more)
configs/: bias.yaml  cantera.yaml  economic.yaml  flags.yaml  scoring.yaml  sources.yaml  temporal.yaml
migrations/: 001_initial_schema.sql  002_seed_periodistas.sql  003_seed_fuentes.sql  004_seed_lexicon.sql  005_seed_flags.sql  006_add_rumores_flags.sql  007_outcomes_lexicon_candidates.sql  008_explanation_cache_alertas_log.sql  009_backtest_tables.sql  010_cantera_extension.sql  011_fix_bluesky_handles.sql  012_recover_dead_sources.sql  013_fix_degraded_sources.sql  014_seed_jugadores.sql  015_seed_fuentes_rm.sql  016_remove_vallejo.sql  017_promote_rm_gn_to_tier_s.sql  018_remove_fake_jugadores.sql  019_update_salidas_plantilla.sql  020_purge_seed_jugadores.sql  021_reset_gn_no_signal.sql  022_reset_gn_no_signal_round2.sql
scripts/: generate_backfill.py  plot_calibration.py  reset_raw.py  run_backfill.py  seed_lexicon_to_d1.py  setup_d1.py  verify_setup.py
tests/: conftest.py  test_session1.py  test_session10_alerts.py  test_session11_backtesting.py  test_session12_cantera.py  test_session2_ingestion.py  test_session3_extraction.py  test_session4_lexicon_reliability.py  test_session5_scoring.py  test_session6_validators.py  test_session7_detectors.py  test_session8_telegram.py  test_session9_calibration.py
(+85 files in other folders)
